--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint . --fix --max-warnings=0",
     "lint-fix": "eslint --fix",
     "format": "prettier . --write",
-    "prepare": "husky"
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -32,7 +32,7 @@
     "lint-staged": "^15.3.0",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.2",
-    "svelte": "^5.15.0",
+    "svelte": "^5.17.1",
     "svelte-check": "^4.1.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
@@ -40,7 +40,7 @@
   },
   "lint-staged": {
     "*.{js,ts,svelte}": [
-      "eslint --cache --fix --max-warnings=0"
+      "svelte-check --tsconfig ./tsconfig.app.json"
     ],
     "*": "prettier --ignore-unknown --write"
   }
