--- a/tsconfig copy.json
+++ b/tsconfig copy.json
@@ -1,5 +1,6 @@
 {
   "files": [],
+  "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
     "types": ["vitest/globals"],
